[package]
name = "deep_search"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
rayon = "1.10.0"
crossbeam-channel = "0.5.13"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]
